--- a/main.html
+++ b/main.html
@@ -7,6 +7,54 @@
 </head>
 
 <body>
+	 <table border="1">
+    <thead>
+      <tr>
+        <th>Roll Number</th>
+        <th>Name</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>101</td>
+        <td>Alice</td>
+      </tr>
+      <tr>
+        <td>102</td>
+        <td>Bob</td>
+      </tr>
+      <tr>
+        <td>103</td>
+        <td>Charlie</td>
+      </tr>
+    </tbody>
+  </table>
+
+  <!-- Heading between table and list -->
+  <h2>List of medias</h2>
+
+  <!-- Ordered Media List -->
+  <ol>
+    <li>
+      <p>Image:</p>
+      <img src="https://picsum.photos/id/123/200/300" alt="Random placeholder image">
+    </li>
+    <li>
+      <p>Video:</p>
+      <video controls width="320">
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+        Your browser does not support the video tag.
+      </video>
+    </li>
+    <li>
+      <p>Audio:</p>
+      <audio controls>
+        <source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
+        Your browser does not support the audio tag.
+      </audio>
+    </li>
+  </ol>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
