--- a/main.html
+++ b/main.html
@@ -31,24 +31,27 @@
     </tbody>
   </table>
 
- 
+  <!-- Heading -->
   <h2>List of medias</h2>
 
-  
- <ol>
-  <li>
-    <p>Image:</p>
-    <img src="https://picsum.photos/id/123/200/300" alt="Random placeholder image">
-  </li>
-  <li>
-    <p>Video:</p>
-    <video controls width="320" src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video>
-  </li>
-  <li>
-    <p>Audio:</p>
-    <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
-  </li>
- </ol>
+  <!-- Ordered List -->
+  <ol>
+    <li>
+      <p>Image:</p>
+      <img src="https://picsum.photos/id/123/200/300" alt="Random placeholder image">
+    </li>
+    <li>
+      <p>Video:</p>
+      <video controls>
+        <source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4" type="video/mp4">
+      </video>
+    </li>
+    <li>
+      <p>Audio:</p>
+      <audio controls src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg"></audio>
+    </li>
+  </ol>
+
 
     <script type="text/javascript" src="./script.js">
 </script>
